--- a/package.json
+++ b/package.json
@@ -9,9 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/server": "^11.10.0",
+    "@mantine/carousel": "^5.9.4",
+    "@mantine/core": "^5.9.4",
+    "@mantine/dates": "^5.9.4",
+    "@mantine/dropzone": "^5.9.4",
+    "@mantine/form": "^5.9.4",
+    "@mantine/hooks": "^5.9.4",
+    "@mantine/modals": "^5.9.4",
+    "@mantine/next": "^5.9.4",
+    "@mantine/notifications": "^5.9.4",
+    "@mantine/nprogress": "^5.9.4",
+    "@mantine/prism": "^5.9.4",
+    "@mantine/spotlight": "^5.9.4",
+    "@mantine/tiptap": "^5.9.4",
+    "@tabler/icons": "^1.117.0",
+    "@tiptap/extension-link": "2.0.0-beta.207",
+    "@tiptap/react": "2.0.0-beta.207",
+    "@tiptap/starter-kit": "2.0.0-beta.207",
     "@types/node": "18.11.15",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
+    "dayjs": "^1.11.7",
+    "embla-carousel-react": "^7.0.5",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
     "next": "13.0.6",
