--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mantine/core": "^5.9.4",
     "@mantine/dates": "^5.9.4",
     "@mantine/dropzone": "^5.9.4",
+    "@mantine/ds": "^5.9.4",
     "@mantine/form": "^5.9.4",
     "@mantine/hooks": "^5.9.4",
     "@mantine/modals": "^5.9.4",
@@ -39,5 +40,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.4"
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^7.6.0"
   }
 }
